Revision history for JSON-Schema-Modern

{{$NEXT}}

0.577     2023-12-19 05:27:04Z
          - new attribute on Error and Result objects: "recommended_response",
            for use when validating HTTP requests

0.576     2023-12-10 06:10:57Z
          - the "stringy_numbers" feature now also applies to the "enum",
            "const", and "uniqueItems" keywords

0.575     2023-11-26 05:11:10Z
          - properly handle some edge cases where the "$schema" keyword can
            change the dialect to a different specification version with
            different Core vocabulary keywords
          - evaluation at non-schema locations is now prohibited

0.574     2023-11-13 00:50:55Z
          - better detection of schema locations, for use by Document
            subclasses
          - fixed vocabulary ordering (from v0.567)
          - properly handle "$dynamicRef", "$recursiveRef" and "$schema"
            referencing a boolean schema
          - bundled metaschemas have been updated to their latest versions
            from https://json-schema.org

0.573     2023-10-21 23:49:03Z
          - fix construction of default values of some attributes e.g.
            media_types, encodings
          - fix list context of has_errors, error_count, annotation_count
            methods

0.572     2023-10-14 22:04:52Z
          - boost runtime performance by removing uses of MooX::HandlesVia

0.571     2023-09-17 01:14:47Z
          - removed duration and uuid formats for draft7 (they were not
            defined until the next spec version)
          - properly default format validation to true in draft7

0.570     2023-09-02 20:42:03Z
          - small performance improvements to 'date-time' and 'date' format
            validation
          - new stringy_numbers option, for validating numbers more loosely

0.569     2023-07-08 23:36:06Z
          - fixed some edge cases with ipv6 format validation

0.568     2023-06-17 07:16:54Z