@@ -16,7 +16,6 @@ no if "$]" >= 5.033001, feature => 'multidimensional';
 no if "$]" >= 5.033006, feature => 'bareword_filehandles';
 use B;
 use Carp 'croak';
-use JSON::MaybeXS 1.004004 'is_bool';
 use Ref::Util 0.100 qw(is_ref is_plain_arrayref is_plain_hashref);
 use Scalar::Util qw(blessed looks_like_number);
 use Storable 'dclone';
@@ -109,6 +108,14 @@ sub get_type ($value) {
     if !($flags & B::SVf_POK) && ($flags & (B::SVf_IOK | B::SVf_NOK));
 
   return 'ambiguous type';
+}
+
+# lifted from JSON::MaybeXS
+sub is_bool ($value) {
+  Scalar::Util::blessed($value)
+    and ($value->isa('JSON::PP::Boolean')
+      or $value->isa('Cpanel::JSON::XS::Boolean')
+      or $value->isa('JSON::XS::Boolean'));
 }
 
 # compares two arbitrary data payloads for equality, as per
