@@ -51,7 +51,7 @@ subtest 'equality, using inflated data' => sub {
   }
 };
 
-my $decoder = JSON::MaybeXS->new(allow_nonref => 1, utf8 => 0);
+my $decoder = JSON::Schema::Modern::_JSON_BACKEND()->new->allow_nonref(1)->utf8(0);
 
 subtest 'equality, using JSON strings' => sub {
   foreach my $test (
