@@ -60,7 +60,11 @@ foreach my $type (sort keys %inflated_data) {
   };
 }
 
-my $decoder = JSON::MaybeXS->new(allow_nonref => 1, canonical => 1, utf8 => 1, allow_bignum => 1);
+my $decoder = JSON::Schema::Modern::_JSON_BACKEND()->new
+  ->allow_nonref(1)
+  ->canonical(1)
+  ->utf8(1)
+  ->allow_bignum(1);
 
 foreach my $type (sort keys %json_data) {
   subtest 'JSON-encoded data, type: '.$type => sub {
